--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,8 @@
-html {
-  width: 100%;
-  height: 180%;
-}
+
 body {
-  background-image: url(../img/page-bg.png);
+  background-image: url(../img/bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
 }
 .wrapper {
   border: 1px solid #FDFEFE;
@@ -21,20 +17,21 @@ body {
   width: 500px;
   margin: 10px;
 }
+h1, h4, h2 {
+
+  font-family: 'Hind', sans-serif;
+}
 h1 {
   font-size: 18px;
-  font-family: 'Hind', sans-serif;
-  color: #2874A6;
   letter-spacing: 1px;
+  color: #2874A6;
 }
 h4 {
   font-size: 14px;
-  font-family: 'Hind', sans-serif;
   color: #34495E;
 }
 h2 {
   font-size: 16px;
-  font-family: 'Hind', sans-serif;
   letter-spacing: 1px;
   color: #2874A6;
 }
@@ -69,73 +66,37 @@ li {
   color: #34495E;
   display: inline-block;
 }
-.one {
+.one, .second, .three {
   padding-left: 20px;
+}
+.one:before, .second:before, .three:before  {
+  color: #FDFEFE;
+  text-align: center;
+  width: 20px;
+  height: 20px;
+  padding: 5px;
+  border-radius: 50%;
+  position: absolute;
+  background: #5DADE2;
 }
 .one:before {
   content: '1';
-  color: white;
-  text-align: center;
-  width: 20px;
-  height: 20px;
-  padding: 5px;
-  border-radius: 50%;
-  position: absolute;
   left: -20px;
-  top: 40px;
-  background: #5DADE2;
-}
-.second {
-  padding-left: 20px;
+  top: 50px;
 }
 .second:before {
   content: '2';
-  color: white;
-  text-align: center;
-  width: 20px;
-  height: 20px;
-  padding: 5px;
-  border-radius: 50%;
-  position: absolute;
   left: -20px;
-  top: 130px;
-  background: #5DADE2;
-}
-
-.three {
-  padding-left: 20px;
+  top: 174px;
 }
 .three:before {
   content: '3';
-  color: white;
-  text-align: center;
-  width: 20px;
-  height: 20px;
-  padding: 5px;
-  border-radius: 50%;
-  position: absolute;
   left: -20px;
-  top: 230px;
-  background: #5DADE2;
+  top: 320px;
 }
-.p1 {
+.p1, .p2, .p3 {
   padding-top: 4px;
   padding-bottom: 10px;
-  padding-left: 20px;
-  font-weight: 100;
-  color: #424949;
-  font-size: 13px;
-}
-.p2 {
-  padding-top: 4px;
-  padding-bottom: 10px;
-  padding-left: 20px;
-  font-weight: 100;
-  color: #424949;
-  font-size: 13px;
-}
-.p3 {
-  padding-top: 4px;
   padding-left: 20px;
   font-weight: 100;
   color: #424949;
@@ -146,8 +107,7 @@ li {
   border-bottom-style: solid;
   border-bottom-width: thin;
   border-bottom-color: #D6E1E5;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin: 0px 10px 0px;
 }
 .second-column {
   display: inline-block;
